hydro_lang/src/builder/rewrites/snapshots/hydro_lang__builder__rewrites__persist_pullup__tests__persist_pullup_behind_tee.snap
---
source: hydro_lang/src/builder/rewrites/persist_pullup.rs
expression: built.ir()
---
[
    ForEach {
        f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , () > ({ use crate :: __staged :: __deps :: * ; use crate :: __staged :: builder :: rewrites :: persist_pullup :: tests :: * ; | n | println ! ("{}" , n) }),
        input: Unpersist {
            inner: Persist {
                inner: Map {
                    f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , i32 > ({ use crate :: __staged :: __deps :: * ; use crate :: __staged :: builder :: rewrites :: persist_pullup :: tests :: * ; | v | v + 1 }),
                    input: Tee {
                        inner: <tee>: Persist {
                            inner: Unpersist {
                                inner: Persist {
                                    inner: Source {
                                        source: Iter(
                                            { use crate :: __staged :: __deps :: * ; use crate :: __staged :: builder :: rewrites :: persist_pullup :: tests :: * ; 0 .. 10 },
                                        ),
                                        metadata: HydroIrMetadata {
                                            location_kind: Process(
                                                0,
                                            ),
                                            output_type: Some(
                                                i32,
                                            ),
                                        },
                                    },
                                    metadata: HydroIrMetadata {
                                        location_kind: Process(
                                            0,
                                        ),
                                        output_type: Some(
                                            i32,
                                        ),
                                    },
                                },
                                metadata: HydroIrMetadata {
                                    location_kind: Tick(
                                        0,
                                        Process(
                                            0,
                                        ),
                                    ),
                                    output_type: Some(
                                        i32,
                                    ),
                                },
                            },
                            metadata: HydroIrMetadata {
                                location_kind: Tick(
                                    0,
                                    Process(
                                        0,
                                    ),
                                ),
                                output_type: Some(
                                    i32,
                                ),
                            },
                        },
                        metadata: HydroIrMetadata {
                            location_kind: Tick(
                                0,
                                Process(
                                    0,
                                ),
                            ),
                            output_type: Some(
                                i32,
                            ),
                        },
                    },
                    metadata: HydroIrMetadata {
                        location_kind: Tick(
                            0,
                            Process(
                                0,
                            ),
                        ),
                        output_type: Some(
                            i32,
                        ),
                    },
                },
                metadata: HydroIrMetadata {
                    location_kind: Tick(
                        0,
                        Process(
                            0,
                        ),
                    ),
                    output_type: Some(
                        i32,
                    ),
                },
            },
            metadata: HydroIrMetadata {
                location_kind: Process(
                    0,
                ),
                output_type: Some(
                    i32,
                ),
            },
        },
        op_metadata: HydroIrOpMetadata,
    },
    ForEach {
        f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , () > ({ use crate :: __staged :: __deps :: * ; use crate :: __staged :: builder :: rewrites :: persist_pullup :: tests :: * ; | n | println ! ("{}" , n) }),
        input: Unpersist {
            inner: Persist {
                inner: Map {
                    f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , i32 > ({ use crate :: __staged :: __deps :: * ; use crate :: __staged :: builder :: rewrites :: persist_pullup :: tests :: * ; | v | v + 1 }),
                    input: Tee {
                        inner: <tee>: Persist {
                            inner: Unpersist {
                                inner: Persist {
                                    inner: Source {
                                        source: Iter(
                                            { use crate :: __staged :: __deps :: * ; use crate :: __staged :: builder :: rewrites :: persist_pullup :: tests :: * ; 0 .. 10 },
                                        ),
                                        metadata: HydroIrMetadata {
                                            location_kind: Process(
                                                0,
                                            ),
                                            output_type: Some(
                                                i32,
                                            ),
                                        },
                                    },
                                    metadata: HydroIrMetadata {
                                        location_kind: Process(
                                            0,
                                        ),
                                        output_type: Some(
                                            i32,
                                        ),
                                    },
                                },
                                metadata: HydroIrMetadata {
                                    location_kind: Tick(
                                        0,
                                        Process(
                                            0,
                                        ),
                                    ),
                                    output_type: Some(
                                        i32,
                                    ),
                                },
                            },
                            metadata: HydroIrMetadata {
                                location_kind: Tick(
                                    0,
                                    Process(
                                        0,
                                    ),
                                ),
                                output_type: Some(
                                    i32,
                                ),
                            },
                        },
                        metadata: HydroIrMetadata {
                            location_kind: Tick(
                                0,
                                Process(
                                    0,
                                ),
                            ),
                            output_type: Some(
                                i32,
                            ),
                        },
                    },
                    metadata: HydroIrMetadata {
                        location_kind: Tick(
                            0,
                            Process(
                                0,
                            ),
                        ),
                        output_type: Some(
                            i32,
                        ),
                    },
                },
                metadata: HydroIrMetadata {
                    location_kind: Tick(
                        0,
                        Process(
                            0,
                        ),
                    ),
                    output_type: Some(
                        i32,
                    ),
                },
            },
            metadata: HydroIrMetadata {
                location_kind: Process(
                    0,
                ),
                output_type: Some(
                    i32,
                ),
            },
        },
        op_metadata: HydroIrOpMetadata,
    },
]
