hydro_lang/src/builder/rewrites/snapshots/hydro_lang__builder__rewrites__persist_pullup__tests__persist_pullup_behind_tee@surface_graph_0.snap
---
source: hydro_lang/src/builder/rewrites/persist_pullup.rs
expression: graph.surface_syntax_string()
---
1v1 = source_iter ({ use crate :: __staged :: __deps :: * ; use crate :: __staged :: builder :: rewrites :: persist_pullup :: tests :: * ; 0 .. 10 });
2v1 = tee ();
3v1 = map (stageleft :: runtime_support :: fn1_type_hint :: < i32 , i32 > ({ use crate :: __staged :: __deps :: * ; use crate :: __staged :: builder :: rewrites :: persist_pullup :: tests :: * ; | v | v + 1 }));
4v1 = persist :: < 'static > ();
5v1 = for_each (stageleft :: runtime_support :: fn1_type_hint :: < i32 , () > ({ use crate :: __staged :: __deps :: * ; use crate :: __staged :: builder :: rewrites :: persist_pullup :: tests :: * ; | n | println ! ("{}" , n) }));
6v1 = map (stageleft :: runtime_support :: fn1_type_hint :: < i32 , i32 > ({ use crate :: __staged :: __deps :: * ; use crate :: __staged :: builder :: rewrites :: persist_pullup :: tests :: * ; | v | v + 1 }));
7v1 = persist :: < 'static > ();
8v1 = for_each (stageleft :: runtime_support :: fn1_type_hint :: < i32 , () > ({ use crate :: __staged :: __deps :: * ; use crate :: __staged :: builder :: rewrites :: persist_pullup :: tests :: * ; | n | println ! ("{}" , n) }));

1v1 -> 2v1;
2v1 -> 3v1;
3v1 -> 4v1;
4v1 -> 5v1;
2v1 -> 6v1;
6v1 -> 7v1;
7v1 -> 8v1;
